Segundo commit. Desarrollo de listar.

--- a/ejemplo01/src/app/Persona/listar/listar.component.html
+++ b/ejemplo01/src/app/Persona/listar/listar.component.html
@@ -14,7 +14,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="text-center">
+                    <tr *ngFor="let persona of personas" class="text-center">
                         <td></td>
                         <td></td>
                         <td></td>
