--- a/ejemplo01/src/app/Persona/listar/listar.component.html
+++ b/ejemplo01/src/app/Persona/listar/listar.component.html
@@ -15,9 +15,9 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let persona of personas" class="text-center">
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>{{persona.id}}</td>
+                        <td>{{persona.name}}</td>
+                        <td>{{persona.apellidos}}</td>
                         <td>
                             <button class="btn btn-warning">Editar</button>
                             <button class="btn btn-danger" style="margin-left: 10px;">Delete</button>
